fixed hero area resizing issue that occurs on mobile browsers

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -54,10 +54,6 @@ body,
     position: relative;
 }
 
-#root > * {
-    
-}
-
 /*---------------NAVIGATION-----------------*/
 .navbar {
     position: fixed;
@@ -75,6 +71,10 @@ body,
     grid-template-columns: repeat(12, 1fr);
     column-gap: 8px;
     justify-content: center;
+}
+
+.navbar.landscape {
+    background-color: rgb(226, 138, 12);
 }
 
     /*-----------HAMBURGER------------------*/
@@ -252,6 +252,12 @@ body,
 
             }
 
+.content-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+
+}
 /*-------------HERO AREA--------------------------*/
 .hero-area {
     position: relative;
@@ -259,7 +265,8 @@ body,
     background-position: center left;
     background-size: cover;
     background-attachment: scroll;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     z-index: -1;
 
     display: grid;
